--- a/src/CombatAnalysis.App/Views/DamageDoneDetailsView.xaml
+++ b/src/CombatAnalysis.App/Views/DamageDoneDetailsView.xaml
@@ -26,6 +26,7 @@
 
         <Grid.Resources>
             <converters:TheNativeBoolToVisibilityConverter x:Key="BoolToVisibility" />
+            <converters:TheNativeIntToVisibilityConverter x:Key="IntToVisibility" />
         </Grid.Resources>
         
         <ContentControl Grid.ColumnSpan="3" Grid.RowSpan="4" Content="{Binding BasicTemplate}">
@@ -36,13 +37,21 @@
             </ContentControl.Resources>
         </ContentControl>
 
-        <StackPanel Grid.Column="3" Grid.Row="1" Margin="25">
+        <StackPanel Grid.Column="3" Grid.Row="1" Margin="25" Height="45"
+                    Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <ComboBox FontSize="18" Width="125" Height="45" VerticalContentAlignment="Center"
+                          SelectedIndex="{Binding SelectedDetailsType}">
+                <ComboBoxItem Content="Общее" IsSelected="True"/>
+                <ComboBoxItem Content="События" />
+            </ComboBox>
             <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="Анализ нанесенного урона"
-                       Style="{StaticResource titleText}"/>
+                       Width="500" TextAlignment="Center" Style="{StaticResource titleText}"
+                       Margin="25 0"/>
         </StackPanel>
 
-        <ListBox Background="Transparent" Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2"
-                 Margin="25" ItemsSource="{Binding DamageDoneInformations}">
+        <ListBox Margin="25" Grid.Row="2" Grid.Column="2" 
+                 Background="Transparent" ItemsSource="{Binding DamageDoneInformations}" 
+                 Visibility="{Binding Path=SelectedDetailsType, Converter={StaticResource IntToVisibility}, ConverterParameter=true:0}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Center">
@@ -72,7 +81,21 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <StackPanel Margin="25 0" Grid.Row="3" Grid.Column="3" Orientation="Horizontal">
+        <ListBox Margin="25" Grid.Row="2" Grid.Column="2" 
+                 Background="Transparent" ItemsSource="{Binding DamageDoneInformations}"
+                 Visibility="{Binding Path=SelectedDetailsType, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Center">
+                        <TextBlock FontSize="14" Text="{Binding Path=Value}" MinWidth="75" Margin="15" />
+                        <TextBlock FontSize="14" Text="{Binding Path=SpellOrItem}" MinWidth="200" Margin="15" />
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        
+        <StackPanel Margin="25 0" Grid.Row="3" Grid.Column="3" Orientation="Horizontal"
+                    Visibility="{Binding Path=SelectedDetailsType, Converter={StaticResource IntToVisibility}, ConverterParameter=true:0}">
             <StackPanel Margin="20 0" MinWidth="400">
                 <StackPanel>
                     <CheckBox Name="dependency" Margin="5" VerticalContentAlignment="Center" 
