--- a/src/CombatAnalysis.App/Views/DamageDoneDetailsView.xaml
+++ b/src/CombatAnalysis.App/Views/DamageDoneDetailsView.xaml
@@ -42,16 +42,36 @@
             <ComboBox FontSize="18" Width="125" Height="45" VerticalContentAlignment="Center"
                           SelectedIndex="{Binding SelectedDetailsType}">
                 <ComboBoxItem Content="Общее" IsSelected="True"/>
-                <ComboBoxItem Content="События" />
+                <ComboBoxItem Content="Подробнее" />
             </ComboBox>
             <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="Анализ нанесенного урона"
-                       Width="500" TextAlignment="Center" Style="{StaticResource titleText}"
+                       Width="450" TextAlignment="Center" Style="{StaticResource titleText}"
                        Margin="25 0"/>
+            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding SelectedPlayer}" FontSize="15"
+                       FontWeight="Bold" Width="200" TextAlignment="Center" Margin="25 0"/>
         </StackPanel>
 
         <ListBox Margin="25" Grid.Row="2" Grid.Column="2" 
+                 Background="Transparent" ItemsSource="{Binding DamageDoneGeneralInformations}"
+                 Visibility="{Binding SelectedDetailsType, Converter={StaticResource IntToVisibility}, ConverterParameter=true:0}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Center">
+                        <TextBlock FontSize="14" Text="{Binding Path=SpellOrItem}" MinWidth="200" Margin="15" />
+                        <TextBlock FontSize="14" Text="{Binding Path=Value}" MinWidth="75" Margin="15" />
+                        <TextBlock FontSize="14" Text="{Binding Path=CastNumber}" MinWidth="75" Margin="15" />
+                        <TextBlock FontSize="14" Text="{Binding Path=MinValue}" MinWidth="75" Margin="15" />
+                        <TextBlock FontSize="14" Text="{Binding Path=MaxValue}" MinWidth="75" Margin="15" />
+                        <TextBlock FontSize="14" Text="{Binding Path=AverageValue, StringFormat=00.00}" MinWidth="75" Margin="15" />
+                        <TextBlock FontSize="14" Text="{Binding Path=DamagePerSecond, StringFormat=00.00}" MinWidth="75" Margin="15" />
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        
+        <ListBox Margin="25" Grid.Row="2" Grid.Column="2" 
                  Background="Transparent" ItemsSource="{Binding DamageDoneInformations}" 
-                 Visibility="{Binding Path=SelectedDetailsType, Converter={StaticResource IntToVisibility}, ConverterParameter=true:0}">
+                 Visibility="{Binding SelectedDetailsType, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Center">
@@ -81,21 +101,8 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <ListBox Margin="25" Grid.Row="2" Grid.Column="2" 
-                 Background="Transparent" ItemsSource="{Binding DamageDoneInformations}"
-                 Visibility="{Binding Path=SelectedDetailsType, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Center">
-                        <TextBlock FontSize="14" Text="{Binding Path=Value}" MinWidth="75" Margin="15" />
-                        <TextBlock FontSize="14" Text="{Binding Path=SpellOrItem}" MinWidth="200" Margin="15" />
-                    </StackPanel>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-        
         <StackPanel Margin="25 0" Grid.Row="3" Grid.Column="3" Orientation="Horizontal"
-                    Visibility="{Binding Path=SelectedDetailsType, Converter={StaticResource IntToVisibility}, ConverterParameter=true:0}">
+                    Visibility="{Binding Path=SelectedDetailsType, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
             <StackPanel Margin="20 0" MinWidth="400">
                 <StackPanel>
                     <CheckBox Name="dependency" Margin="5" VerticalContentAlignment="Center" 
