--- a/src/CombatAnalysis.App/Views/DamageDoneDetailsView.xaml
+++ b/src/CombatAnalysis.App/Views/DamageDoneDetailsView.xaml
@@ -39,7 +39,7 @@
 
         <StackPanel Grid.Column="3" Grid.Row="1" Margin="25" Height="45"
                     Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <ComboBox FontSize="18" Width="125" Height="45" VerticalContentAlignment="Center"
+            <ComboBox Name="detailsType" FontSize="18" Width="125" Height="45" VerticalContentAlignment="Center"
                           SelectedIndex="{Binding SelectedDetailsType}">
                 <ComboBoxItem Content="Общее" IsSelected="True"/>
                 <ComboBoxItem Content="Подробнее" />
@@ -53,7 +53,7 @@
 
         <ListBox Margin="25" Grid.Row="2" Grid.Column="2" 
                  Background="Transparent" ItemsSource="{Binding DamageDoneGeneralInformations}"
-                 Visibility="{Binding SelectedDetailsType, Converter={StaticResource IntToVisibility}, ConverterParameter=true:0}">
+                 Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:0}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Center">
@@ -71,7 +71,7 @@
         
         <ListBox Margin="25" Grid.Row="2" Grid.Column="2" 
                  Background="Transparent" ItemsSource="{Binding DamageDoneInformations}" 
-                 Visibility="{Binding SelectedDetailsType, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
+                 Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Center">
@@ -102,7 +102,7 @@
         </ListBox>
 
         <StackPanel Margin="25 0" Grid.Row="3" Grid.Column="3" Orientation="Horizontal"
-                    Visibility="{Binding Path=SelectedDetailsType, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
+                    Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
             <StackPanel Margin="20 0" MinWidth="400">
                 <StackPanel>
                     <CheckBox Name="dependency" Margin="5" VerticalContentAlignment="Center" 
