--- a/src/CombatAnalysis.App/Views/HealDoneDetailsView.xaml
+++ b/src/CombatAnalysis.App/Views/HealDoneDetailsView.xaml
@@ -1,16 +1,15 @@
 ﻿<views:MvxWpfView
-      xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
-      xmlns:mvx="clr-namespace:MvvmCross.Platforms.Wpf.Binding;assembly=MvvmCross.Platforms.Wpf"
-      x:Class="CombatAnalysis.App.Views.HealDoneDetailsView"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:CombatAnalysis.App.Views"
-      xmlns:viewModels="clr-namespace:CombatAnalysis.Core.ViewModels;assembly=CombatAnalysis.Core"
-      xmlns:converters="clr-namespace:CombatAnalysis.App.Converters"
-      xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
-      mc:Ignorable="d" d:DesignHeight="850" d:DesignWidth="1250">
+    x:Class="CombatAnalysis.App.Views.HealDoneDetailsView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:converters="clr-namespace:CombatAnalysis.App.Converters"
+    xmlns:local="clr-namespace:CombatAnalysis.App.Views"
+    xmlns:viewModels="clr-namespace:CombatAnalysis.Core.ViewModels;assembly=CombatAnalysis.Core"
+    xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
+    mc:Ignorable="d" d:DesignHeight="850" d:DesignWidth="1250">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -27,6 +26,7 @@
 
         <Grid.Resources>
             <converters:TheNativeBoolToVisibilityConverter x:Key="BoolToVisibility" />
+            <converters:TheNativeIntToVisibilityConverter x:Key="IntToVisibility" />
         </Grid.Resources>
         
         <ContentControl Grid.ColumnSpan="3" Grid.RowSpan="4" Content="{Binding BasicTemplate}">
@@ -37,13 +37,41 @@
             </ContentControl.Resources>
         </ContentControl>
 
-        <StackPanel Grid.Column="3" Grid.Row="1" Margin="25">
+        <StackPanel Grid.Column="3" Grid.Row="1" Margin="25" Height="45"
+                    Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <ComboBox Name="detailsType" FontSize="18" Width="125" 
+                      Height="45" VerticalContentAlignment="Center" SelectedIndex="0">
+                <ComboBoxItem Content="Общее" IsSelected="True"/>
+                <ComboBoxItem Content="Подробнее" />
+            </ComboBox>
             <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="Анализ исцеления"
-                       Style="{StaticResource titleText}"/>
+                       Width="450" TextAlignment="Center" Style="{StaticResource titleText}"
+                       Margin="25 0"/>
+            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding SelectedPlayer}" FontSize="15"
+                       FontWeight="Bold" Width="200" TextAlignment="Center" Margin="25 0"/>
         </StackPanel>
 
-        <ListBox Background="Transparent" Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2"
-                 Margin="25" ItemsSource="{Binding HealDoneInformations}">
+        <ListBox Margin="25" Grid.Row="2" Grid.Column="2" 
+                 Background="Transparent" ItemsSource="{Binding HealDoneGeneralInformations}"
+                 Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:0}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Center">
+                        <TextBlock FontSize="14" Text="{Binding Path=SpellOrItem}" MinWidth="200" Margin="15" />
+                        <TextBlock FontSize="14" Text="{Binding Path=Value}" MinWidth="75" Margin="15" />
+                        <TextBlock FontSize="14" Text="{Binding Path=CastNumber}" MinWidth="75" Margin="15" />
+                        <TextBlock FontSize="14" Text="{Binding Path=MinValue}" MinWidth="75" Margin="15" />
+                        <TextBlock FontSize="14" Text="{Binding Path=MaxValue}" MinWidth="75" Margin="15" />
+                        <TextBlock FontSize="14" Text="{Binding Path=AverageValue, StringFormat=00.00}" MinWidth="75" Margin="15" />
+                        <TextBlock FontSize="14" Text="{Binding Path=HealPerSecond, StringFormat=00.00}" MinWidth="75" Margin="15" />
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+
+        <ListBox Background="Transparent" Grid.Row="2" Grid.Column="3" 
+                 Grid.ColumnSpan="2" Margin="25" ItemsSource="{Binding HealDoneInformations}"
+                 Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Center">
@@ -65,7 +93,8 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <StackPanel Margin="25 0" Grid.Row="3" Grid.Column="3" Orientation="Horizontal">
+        <StackPanel Margin="25 0" Grid.Row="3" Grid.Column="3" Orientation="Horizontal"
+                    Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
             <StackPanel Margin="20 0" MinWidth="400">
                 <StackPanel>
                     <CheckBox Name="dependency" Margin="5" VerticalContentAlignment="Center" 
