--- a/src/CombatAnalysis.App/Views/DamageDoneDetailsView.xaml
+++ b/src/CombatAnalysis.App/Views/DamageDoneDetailsView.xaml
@@ -40,7 +40,7 @@
         <StackPanel Grid.Column="3" Grid.Row="1" Margin="25" Height="45"
                     Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
             <ComboBox Name="detailsType" FontSize="18" Width="125" Height="45" VerticalContentAlignment="Center"
-                          SelectedIndex="{Binding SelectedDetailsType}">
+                          SelectedIndex="0">
                 <ComboBoxItem Content="Общее" IsSelected="True"/>
                 <ComboBoxItem Content="Подробнее" />
             </ComboBox>
