--- a/src/CombatAnalysis.App/Views/GeneralAnalysisView.xaml
+++ b/src/CombatAnalysis.App/Views/GeneralAnalysisView.xaml
@@ -1,15 +1,16 @@
 ﻿<views:MvxWpfView
-      xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
-      xmlns:mvx="clr-namespace:MvvmCross.Platforms.Wpf.Binding;assembly=MvvmCross.Platforms.Wpf"
-      x:Class="CombatAnalysis.App.Views.GeneralAnalysisView"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:CombatAnalysis.App.Views"
-      xmlns:viewModels="clr-namespace:CombatAnalysis.Core.ViewModels;assembly=CombatAnalysis.Core"
-      xmlns:uc="clr-namespace:CombatAnalysis.App.UserControls"
-      mc:Ignorable="d" d:DesignHeight="850" d:DesignWidth="1250">
+    x:Class="CombatAnalysis.App.Views.GeneralAnalysisView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:converters="clr-namespace:CombatAnalysis.App.Converters"
+    xmlns:uc="clr-namespace:CombatAnalysis.App.UserControls"
+    xmlns:local="clr-namespace:CombatAnalysis.App.Views"
+    xmlns:viewModels="clr-namespace:CombatAnalysis.Core.ViewModels;assembly=CombatAnalysis.Core"
+    xmlns:mvx="clr-namespace:MvvmCross.Platforms.Wpf.Binding;assembly=MvvmCross.Platforms.Wpf"
+    xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
+    mc:Ignorable="d" d:DesignHeight="850" d:DesignWidth="1250">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -22,6 +23,10 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
+        <Grid.Resources>
+            <converters:TheNativeBoolToVisibilityConverter x:Key="BoolToVisibility" />
+            <converters:TheNativeIntToVisibilityConverter x:Key="IntToVisibility" />
+        </Grid.Resources>
         <ContentControl Grid.RowSpan="2" Grid.ColumnSpan="3" Content="{Binding BasicTemplate}">
             <ContentControl.Resources>
                 <DataTemplate DataType="{x:Type viewModels:BasicTemplateViewModel}">
@@ -38,7 +43,6 @@
                        Text="Анализ" FontSize="18" FontWeight="Bold"
                        Margin="100 0" Style="{StaticResource titleText}">
             </TextBlock>
-            <!--<ComboBox Width="150" ItemsSource="{Binding Players}" SelectedIndex="{Binding PlayerIndex}" />-->
         </StackPanel>
         <ListBox Grid.Row="1" Grid.Column="2" ItemsSource="{Binding Combats}"
                  Margin="50" SelectedIndex="{Binding CombatIndex}">
@@ -51,16 +55,19 @@
                         </Grid.ColumnDefinitions>
                         
                         <StackPanel Grid.Column="0" Margin="5"  HorizontalAlignment="Center">
-                            <uc:CombatDataItem Title="{Binding Name}" Icon="Information" Color1="Blue" />
-                            <uc:CombatDataItem Title="{Binding DamageDone}" Icon="Sword" Color1="Gray" />
-                            <uc:CombatDataItem Title="{Binding HealDone}" Icon="Plus" Color1="Green" />
-                            <uc:CombatDataItem Title="{Binding IsWin}" Icon="CalendarWeek" Color1="Orange" />
+                            <uc:CombatDataItem Title="{Binding Path=Name}" Icon="Information" Color1="Blue" />
+                            <uc:CombatDataItem Title="{Binding Path=DamageDone}" Icon="Sword" Color1="Gray" />
+                            <uc:CombatDataItem Title="{Binding Path=HealDone}" Icon="Plus" Color1="Orange" />
+                            <uc:CombatDataItem Title="Победа" Icon="CalendarWeek" 
+                                               Visibility="{Binding Path=IsWin, Converter={StaticResource BoolToVisibility}, ConverterParameter=true}" Color1="Green" />
+                            <uc:CombatDataItem Title="Поражение" Icon="CalendarWeek" 
+                                               Visibility="{Binding Path=IsWin, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:true}" Color1="Red" />
                         </StackPanel>
                         <StackPanel Grid.Column="1" Margin="5"  HorizontalAlignment="Center">
-                            <uc:CombatDataItem Title="{Binding DamageTaken}" Icon="Shield" Color1="Black" />
-                            <uc:CombatDataItem Title="{Binding DeathNumber}" Icon="DeathlyHallows" Color1="Red" />
-                            <uc:CombatDataItem Title="{Binding EnergyRecovery}" Icon="Resistor" Color1="Purple" />
-                            <uc:CombatDataItem Title="{Binding UsedBuffs}" Icon="MaterialDesign" Color1="Brown" />
+                            <uc:CombatDataItem Title="{Binding Path=DamageTaken}" Icon="Shield" Color1="Black" />
+                            <uc:CombatDataItem Title="{Binding Path=DeathNumber}" Icon="DeathlyHallows" Color1="Red" />
+                            <uc:CombatDataItem Title="{Binding Path=EnergyRecovery}" Icon="Resistor" Color1="Purple" />
+                            <uc:CombatDataItem Title="{Binding Path=UsedBuffs}" Icon="MaterialDesign" Color1="Brown" />
                         </StackPanel>
                     </Grid>
                 </DataTemplate>
