--- a/src/CombatAnalysis.App/Views/GeneralAnalysisView.xaml
+++ b/src/CombatAnalysis.App/Views/GeneralAnalysisView.xaml
@@ -35,14 +35,14 @@
             </ContentControl.Resources>
         </ContentControl>
         
-        <StackPanel Grid.ColumnSpan="3" Grid.Row="0" Orientation="Horizontal"
-                    HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0 25">
-            <Button Content="Подробнее" Height="30" Width="100"
+        <StackPanel Grid.Column="3" Grid.Row="0" Orientation="Horizontal"
+                    HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0 25"
+                    MaxWidth="750">
+            <Button Content="Подробнее" Height="45" Width="125" FontSize="16"
                     mvx:Bi.nd="Command ShowDetailsCommand" Foreground="ForestGreen" Style="{StaticResource showButton}"/>
             <TextBlock Name="tes11" HorizontalAlignment="Center" VerticalAlignment="Center" Width="75" 
                        Text="Анализ" FontSize="18" FontWeight="Bold"
-                       Margin="100 0" Style="{StaticResource titleText}">
-            </TextBlock>
+                       Margin="100 0" Style="{StaticResource titleText}"/>
         </StackPanel>
         <ListBox Grid.Row="1" Grid.Column="2" ItemsSource="{Binding Combats}"
                  Margin="50" SelectedIndex="{Binding CombatIndex}">
