--- a/src/CombatAnalysis.App/Views/TargetCombatDetailsView.xaml
+++ b/src/CombatAnalysis.App/Views/TargetCombatDetailsView.xaml
@@ -1,14 +1,14 @@
 ﻿<views:MvxWpfView
-      xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
-      x:Class="CombatAnalysis.App.Views.TargetCombatDetailsView"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:CombatAnalysis.App.Views"
-      xmlns:viewModels="clr-namespace:CombatAnalysis.Core.ViewModels;assembly=CombatAnalysis.Core"
-      xmlns:uc="clr-namespace:CombatAnalysis.App.UserControls"
-      mc:Ignorable="d" d:DesignHeight="850" d:DesignWidth="1250">
+    x:Class="CombatAnalysis.App.Views.TargetCombatDetailsView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:uc="clr-namespace:CombatAnalysis.App.UserControls"
+    xmlns:local="clr-namespace:CombatAnalysis.App.Views"
+    xmlns:viewModels="clr-namespace:CombatAnalysis.Core.ViewModels;assembly=CombatAnalysis.Core"
+    xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
+    mc:Ignorable="d" d:DesignHeight="850" d:DesignWidth="1250">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -42,20 +42,23 @@
         
         <!--#endregion-->
         
-        <DockPanel Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="1" Height="100" 
-                    HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 -25">
+        <StackPanel Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="1" Height="100" 
+                    HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 -25"
+                    Orientation="Horizontal">
             <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="Подробная информация"
-                       Margin="100 0" Style="{StaticResource titleText}"/>
+                       Margin="50 0" Style="{StaticResource titleText}"/>
+            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding SelectedCombat}"
+                       Margin="50 0" FontSize="16" FontWeight="Bold"/>
             <!--<StackPanel DockPanel.Dock="Right" VerticalAlignment="Center" HorizontalAlignment="Center">
                 <TextBlock HorizontalAlignment="Center" Text="Бой"/>
                 <TextBlock HorizontalAlignment="Center" Text="{Binding CombatName}" FontWeight="Bold"/>
                 <TextBlock HorizontalAlignment="Center" Text="Игрок"/>
                 <TextBlock HorizontalAlignment="Center" Text="{Binding Player}" FontWeight="Bold"/>
             </StackPanel>-->
-        </DockPanel>
+        </StackPanel>
         
         <ListBox Background="Transparent" Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2"
-                 ItemsSource="{Binding PlayersCombatData}" SelectedIndex="0" SelectedItem="{Binding SelectedPlayer}">
+                 ItemsSource="{Binding PlayersCombatData}" SelectedIndex="{Binding SelectedIndex}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Margin="5" HorizontalAlignment="Center">
