--- a/src/CombatAnalysis.App/Views/DamageDoneDetailsView.xaml
+++ b/src/CombatAnalysis.App/Views/DamageDoneDetailsView.xaml
@@ -14,9 +14,9 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="0.15*"/>
-            <RowDefinition Height="0.17*"/>
+            <RowDefinition Height="0.1*"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="0.575*"/>
+            <RowDefinition Height="0.15*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="55"/>
@@ -37,10 +37,9 @@
             </ContentControl.Resources>
         </ContentControl>
 
-        <StackPanel Grid.Column="3" Grid.Row="1" Margin="25" Height="45"
-                    Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <ComboBox Name="detailsType" FontSize="18" Width="125" Height="45" VerticalContentAlignment="Center"
-                          SelectedIndex="0">
+        <StackPanel Grid.Column="3" Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center"
+                    HorizontalAlignment="Center" Panel.ZIndex="1">
+            <ComboBox Style="{DynamicResource ComboBoxStyle1}" Name="detailsType" SelectedIndex="0">
                 <ComboBoxItem Content="Общее" IsSelected="True"/>
                 <ComboBoxItem Content="Подробнее" />
             </ComboBox>
@@ -51,7 +50,7 @@
                        FontWeight="Bold" Width="200" TextAlignment="Center" Margin="25 0"/>
         </StackPanel>
 
-        <ListBox Margin="25" Grid.Row="2" Grid.Column="2" 
+        <ListBox Margin="20" Grid.Row="2" Grid.Column="2" 
                  Background="Transparent" ItemsSource="{Binding DamageDoneGeneralInformations}"
                  Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:0}">
             <ListBox.ItemTemplate>
@@ -101,7 +100,7 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <StackPanel Margin="25 0" Grid.Row="3" Grid.Column="3" Orientation="Horizontal"
+        <StackPanel Margin="20 0" Grid.Row="3" Grid.Column="3" Orientation="Horizontal"
                     Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
             <StackPanel Margin="20 0" MinWidth="400">
                 <StackPanel>
