--- a/src/CombatAnalysis.App/Views/HealDoneDetailsView.xaml
+++ b/src/CombatAnalysis.App/Views/HealDoneDetailsView.xaml
@@ -13,10 +13,10 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.25*"/>
-            <RowDefinition Height="0.16*"/>
+            <RowDefinition Height="0.15*"/>
+            <RowDefinition Height="0.1*"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="0.4*"/>
+            <RowDefinition Height="0.15*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="55"/>
@@ -37,10 +37,9 @@
             </ContentControl.Resources>
         </ContentControl>
 
-        <StackPanel Grid.Column="3" Grid.Row="1" Margin="25" Height="45"
-                    Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <ComboBox Name="detailsType" FontSize="18" Width="125" 
-                      Height="45" VerticalContentAlignment="Center" SelectedIndex="0">
+        <StackPanel Grid.Column="3" Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" 
+                    HorizontalAlignment="Center" Panel.ZIndex="1">
+            <ComboBox Style="{DynamicResource ComboBoxStyle1}" Name="detailsType" SelectedIndex="0">
                 <ComboBoxItem Content="Общее" IsSelected="True"/>
                 <ComboBoxItem Content="Подробнее" />
             </ComboBox>
@@ -51,7 +50,7 @@
                        FontWeight="Bold" Width="200" TextAlignment="Center" Margin="25 0"/>
         </StackPanel>
 
-        <ListBox Margin="25" Grid.Row="2" Grid.Column="2" 
+        <ListBox Margin="20" Grid.Row="2" Grid.Column="2" 
                  Background="Transparent" ItemsSource="{Binding HealDoneGeneralInformations}"
                  Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:0}">
             <ListBox.ItemTemplate>
@@ -70,7 +69,7 @@
         </ListBox>
 
         <ListBox Background="Transparent" Grid.Row="2" Grid.Column="3" 
-                 Grid.ColumnSpan="2" Margin="25" ItemsSource="{Binding HealDoneInformations}"
+                 Grid.ColumnSpan="2" Margin="20" ItemsSource="{Binding HealDoneInformations}"
                  Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
