--- a/src/CombatAnalysis.App/Views/TargetCombatDetailsView.xaml
+++ b/src/CombatAnalysis.App/Views/TargetCombatDetailsView.xaml
@@ -12,7 +12,7 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.25*"/>
+            <RowDefinition Height="0.15*"/>
             <RowDefinition Height="0.1*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="0.15*"/>
@@ -58,7 +58,7 @@
         </StackPanel>
         
         <ListBox Background="Transparent" Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2"
-                 ItemsSource="{Binding PlayersCombatData}" SelectedIndex="{Binding SelectedIndex}">
+                 Margin="20" ItemsSource="{Binding PlayersCombatData}" SelectedIndex="{Binding SelectedIndex}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Margin="5" HorizontalAlignment="Center">
