--- a/src/CombatAnalysis.App/App.xaml
+++ b/src/CombatAnalysis.App/App.xaml
@@ -198,7 +198,7 @@
         </Style>
 
         <ControlTemplate x:Key="ComboBoxTemplate" TargetType="{x:Type ComboBox}">
-            <Grid x:Name="templateRoot" SnapsToDevicePixels="true" Height="34" Width="150">
+            <Grid x:Name="templateRoot" SnapsToDevicePixels="true" Height="34">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition MinWidth="{DynamicResource {x:Static SystemParameters.VerticalScrollBarWidthKey}}" Width="0"/>
