--- a/src/CombatAnalysis.App/Views/DamageTakenDetailsView.xaml
+++ b/src/CombatAnalysis.App/Views/DamageTakenDetailsView.xaml
@@ -84,8 +84,8 @@
                    FontWeight="SemiBold" IsChecked="{Binding IsCollectionReversed}"/>
         </StackPanel>
 
-        <ListBox Margin="20 30 20 45" Grid.Row="2" Grid.Column="2" 
-                 Background="Transparent" ItemsSource="{Binding DamageTakenGeneralInformations}"
+        <ListBox Margin="20 30 20 45" Grid.Row="2" Grid.Column="2" Height="450"
+                 VerticalAlignment="Top" Background="Transparent" ItemsSource="{Binding DamageTakenGeneralInformations}"
                  Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:0}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
@@ -102,8 +102,8 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <ListBox Margin="20 30 20 45" Background="Transparent" Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2"
-                 ItemsSource="{Binding DamageTakenInformations}"
+        <ListBox Margin="20 30 20 45" Background="Transparent" Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2" Height="450"
+                 VerticalAlignment="Top" ItemsSource="{Binding DamageTakenInformations}"
                  Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
@@ -122,7 +122,7 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <StackPanel Grid.Column="2" Grid.Row="2" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="20 10"
+        <StackPanel Grid.Column="2" Grid.Row="2" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="0 75"
                     Orientation="Horizontal">
             <TextBlock Margin="50 0" HorizontalAlignment="Center" VerticalAlignment="Center"
                    Text="Всего:" FontSize="16" TextAlignment="Center"/>
@@ -130,21 +130,21 @@
                    Text="{Binding TotalValue}" FontSize="18" TextAlignment="Center" FontWeight="Bold"/>
         </StackPanel>
         
-        <StackPanel Margin="25 10" Grid.Row="3" Grid.Column="3" Orientation="Horizontal"
+        <StackPanel Margin="20 -60" Grid.Row="3" Grid.Column="3" Orientation="Horizontal"
                     Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:1}">
             <StackPanel Margin="20" MinWidth="400">
-                <CheckBox Margin="5" VerticalContentAlignment="Center" Content="Показать уклонения" IsChecked="{Binding IsShowDodge}"
-                  FontSize="18" Height="30" VerticalAlignment="Center" FontWeight="SemiBold" />
-                <CheckBox Margin="5" VerticalContentAlignment="Center" Content="Показать парирования" IsChecked="{Binding IsShowParry}"
-                  FontSize="18" Height="30" VerticalAlignment="Center" FontWeight="SemiBold" />
-                <CheckBox Margin="5" VerticalContentAlignment="Center" Content="Показать промахи" IsChecked="{Binding IsShowMiss}"
-                  FontSize="18" Height="30" VerticalAlignment="Center" FontWeight="SemiBold" />
+                <CheckBox Margin="25 5" VerticalContentAlignment="Center" Content="Показать уклонения" IsChecked="{Binding IsShowDodge}"
+                  FontSize="14" VerticalAlignment="Center" FontWeight="SemiBold" />
+                <CheckBox Margin="25 5" VerticalContentAlignment="Center" Content="Показать парирования" IsChecked="{Binding IsShowParry}"
+                  FontSize="14" VerticalAlignment="Center" FontWeight="SemiBold" />
+                <CheckBox Margin="25 5" VerticalContentAlignment="Center" Content="Показать промахи" IsChecked="{Binding IsShowMiss}"
+                  FontSize="14" VerticalAlignment="Center" FontWeight="SemiBold" />
             </StackPanel>
             <StackPanel Margin="20" MinWidth="400">
-                <CheckBox Margin="5" VerticalContentAlignment="Center" Content="Показать сопротивления" IsChecked="{Binding IsShowResist}"
-                  FontSize="18" Height="30" VerticalAlignment="Center" FontWeight="SemiBold" />
-                <CheckBox Margin="5" VerticalContentAlignment="Center" Content="Показать иммунитет" IsChecked="{Binding IsShowImmune}"
-                  FontSize="18" Height="30" VerticalAlignment="Center" FontWeight="SemiBold" />
+                <CheckBox Margin="25 5" VerticalContentAlignment="Center" Content="Показать сопротивления" IsChecked="{Binding IsShowResist}"
+                  FontSize="14" VerticalAlignment="Center" FontWeight="SemiBold" />
+                <CheckBox Margin="25 5" VerticalContentAlignment="Center" Content="Показать иммунитет" IsChecked="{Binding IsShowImmune}"
+                  FontSize="14" VerticalAlignment="Center" FontWeight="SemiBold" />
             </StackPanel>
         </StackPanel>
     </Grid>
